--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
+    "react-multi-carousel": "^2.8.6",
     "react-responsive-carousel": "^3.2.23",
     "sonner": "^2.0.6"
   },
